--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap");
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --font-didact-gothic: "Didact Gothic", sans-serif;
+}
 
 * {
   box-sizing: border-box;
@@ -11,6 +18,7 @@ html,
   width: 100%;
   padding: 0%;
   margin: 0%;
+  font-family: var(--font-didact-gothic);
 }
 
 /* global.css or module.css */
